--- a/SimpleDAL/SimpleDAL.csproj
+++ b/SimpleDAL/SimpleDAL.csproj
@@ -11,15 +11,22 @@
     <RepositoryType />
     <PackageTags>UnitOfWork, Repository, DataAccessLayer</PackageTags>
     <PackageProjectUrl>https://github.com/mhfarzin/SimpleDAL</PackageProjectUrl>
-    <Version>2.1.0</Version>
+    <Version>3.0.0</Version>
+    <PackageIcon>SimpleDAL-Logo.png</PackageIcon>
+    <AssemblyVersion>3.0.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.20" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.113.7" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\SimpleDAL-Logo.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
     <None Include="..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
